--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div id="menu">
         <button id="menu-toggle">&#9776; Menu</button>
+        <div class="nav-myname"><i>S.UDDAB~KHADKA</i></div>
         <ul id="menu-list">
-            <img src="photo/11.jpg" alt="">
+            <img src="photo/e.jpg" alt="">
             <li><a href="index.html">Home</a></li>
             <li><a href="#about-me">About</a></li>
             <li><a href="#contact-me">Contact</a></li>
         </ul>
     </div>
-
     <!-- image slider -->
     <div class="background-color">
         <div class="slider">
@@ -29,13 +29,13 @@
                 <input type="radio" name="radio-btn" id="radio2">
 
                 <div class="slide first">
-                    <img src="photo/6.jpg" alt="">
+                    <img src="photo/a.jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="photo/9.jpg" alt="">
+                    <img src="photo/2.jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="photo/11.jpg" alt="">
+                    <img src="photo/c.jpg" alt="">
                 </div>
 
                 <div class="navigation-auto">
@@ -51,7 +51,12 @@
                 <label for="radio3" class="manual-btn"></label>
             </div>
         </div>
-
+    </div>
+    <div class="hero-img">
+        <img src="photo/1.jpg" alt="">
+    </div>
+    <div class="video">
+        <video src="photo/v.mp4" controls></video>
     </div>
     <footer>
         <div class="about-me" id="about-me">
