--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="menu-toggle">&#9776; Menu</button>
         <div class="nav-myname"><i>S.UDDAB~KHADKA</i></div>
         <ul id="menu-list">
-            <img src="photo/e.jpg" alt="">
+            <img src="e.jpg" alt="">
             <li><a href="index.html">Home</a></li>
             <li><a href="#about-me">About</a></li>
             <li><a href="#contact-me">Contact</a></li>
