--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <input type="radio" name="radio-btn" id="radio2">
 
                 <div class="slide first">
-                    <img src="photo/a.jpg" alt="">
+                    <img src="a.jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="photo/2.jpg" alt="">
+                    <img src="2.jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="photo/c.jpg" alt="">
+                    <img src="c.jpg" alt="">
                 </div>
 
                 <div class="navigation-auto">
@@ -53,10 +53,10 @@
         </div>
     </div>
     <div class="hero-img">
-        <img src="photo/1.jpg" alt="">
+        <img src="1.jpg" alt="">
     </div>
     <div class="video">
-        <video src="photo/v.mp4" controls></video>
+        <video src="v.mp4" controls></video>
     </div>
     <footer>
         <div class="about-me" id="about-me">
